# webpagescreapeanddecrypt

./: .gitignore  README.md  examples.py  requirements.txt  scraper.py  test_scraper.py
.github/workflows/: ci.yml  linux-build.yml  macos-build.yml  python-tests.yml  windows-build.yml
gui/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
tests/: test_scraper.py
